[gd_scene load_steps=5 format=3 uid="uid://cb7c5rvtn0yfc"]

[ext_resource type="Texture2D" uid="uid://c0wiq2it0ff2p" path="res://Assets/PNG/Sprites/Ships/spaceShips_003.png" id="1_c3t8l"]
[ext_resource type="Script" path="res://Scripts/enemy.gd" id="1_xlvrb"]
[ext_resource type="PackedScene" uid="uid://swnbao0y2sa0" path="res://Scenes/FuelScene/fuel.tscn" id="3_7f70d"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d7pes"]
size = Vector2(4, 598)

[node name="Enemy" type="Area2D" groups=["damagable"]]
collision_layer = 8
collision_mask = 0
script = ExtResource("1_xlvrb")

[node name="SpaceShips003" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_c3t8l")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PackedVector2Array(-26, -22, -17, -22, -7, -17, -5, -23, 5, -23, 7, -17, 17, -23, 27, -22, 16, 14, 10, 15, 8, 22, 5, 24, -3, 24, -7, 23, -10, 15, -16, 14)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
visible = false
position = Vector2(-0.500001, 0.500002)
scale = Vector2(2.85, 2.65)

[node name="WeaponPosition" type="Node2D" parent="."]
position = Vector2(0, 14)

[node name="center" type="Node2D" parent="WeaponPosition"]
position = Vector2(0, 32)

[node name="CoolDown" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="DetectionZone" type="Area2D" parent="."]
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionZone"]
position = Vector2(0, 349)
shape = SubResource("RectangleShape2D_d7pes")

[node name="Fuel" parent="." instance=ExtResource("3_7f70d")]
position = Vector2(2.84217e-13, -32)
rotation = 3.14159
color = Color(0.741176, 0.243137, 0.243137, 1)
anim_offset_max = 0.1758

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="CoolDown" to="." method="_on_cool_down_timeout"]
[connection signal="area_entered" from="DetectionZone" to="." method="_on_detection_zone_area_entered"]
[connection signal="area_exited" from="DetectionZone" to="." method="_on_detection_zone_area_exited"]
